# Finova

./: .env.example  .gitignore  README.md  pyproject.toml
src/: logging.py  main.py  utils.py
src/agents/: agent.py
src/agents/sub_agents/: __init__.py
src/agents/sub_agents/budget_agent/: agent.py
src/agents/sub_agents/financial_advisor/: __init__.py  agent.py
src/agents/sub_agents/financial_goal_agent/: __init__.py  agent.py
src/agents/sub_agents/liability_agent/: __init__.py  agent.py
src/agents/sub_agents/preference_agent/: agent.py
src/agents/sub_agents/read_agent/: __init__.py  agent.py
src/agents/sub_agents/search_agent/: agent.py
src/agents/sub_agents/wishlist/: __init__.py  agent.py
src/agents/sub_agents/write_agent/: __init__.py  agent.py
src/db/: __init__.py  database.py  finova.db  sql_db.py  vector.py
src/prompts/: __init__.py  advisor.py  base.py  budget_agent.py  financial_goal_agent.py  finova.py  flo.py  liability_agent.py  read_agent.py  wishlist_agent.py  write_agent.py
src/tools/: __init__.py  insert_transaction.py  time_tool.py  user_tool.py  user_tools.py
