[project]
name = "finova"
version = "0.1.0"
author = "Revito Pradipa <revitopradipa@gmail.com>"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "google-adk>=1.15.1",
    "ipykernel>=6.30.1",
    "mcp>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "langfuse>=3.6.1",
    "openinference-instrumentation-google-adk>=0.1.5",
]