[project]
name = "flo"
version = "0.1.0"
author = "Revito Pradipa <revitopradipa@gmail.com>"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "google-adk>=1.15.1",
    "huggingface-hub>=0.35.3",
    "mcp>=1.16.0",
    "qdrant-client>=1.15.1",
]

[project.optional-dependencies]
dev = [
    "langfuse>=3.6.1",
    "openinference-instrumentation-google-adk>=0.1.5",
]
